# ayp2_plantilla_tp2_2c2023

./: CMakeLists.txt  README.md  save_file.csv
include/: Item.hpp  cola.hpp  evento.hpp  lista_de.hpp  nodo.hpp  nodo_de.hpp
src/: Item.cpp  evento.cpp
tests/: CMakeLists.txt  cola_tests.cpp  lista_de_tests.cpp
